--- a/flex.css
+++ b/flex.css
@@ -7,3 +7,148 @@
 .flex {
   margin: 10px;
 }
+
+.flexOne {
+  display: flex;
+}
+
+.flexOne > .square:not(:last-child) {
+  margin-right: 5px;
+}
+
+.flexTwo {
+  display: flex;
+  flex-direction: column;
+}
+
+.flexTwo > .square:not(:last-child) {
+  margin-bottom: 2px;
+}
+
+.flexThree {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
+}
+
+.flexThree > .square:not(:first-child) {
+  margin-right: 2px;
+}
+
+.flexFour {
+  display: flex;
+  flex-wrap: wrap;
+  width: 350px;
+}
+
+.flexFour > .square {
+  background-color: #0b6643;
+  margin: 5px;
+}
+
+.flexFive {
+  display: flex;
+  width: 350px;
+}
+
+.flexFive > .item {
+  background-color: #0b6643;
+  width: 100px;
+  height: 100px;
+  margin: 2px;
+}
+
+#grow {
+  flex-grow: 2;
+}
+
+.flexSix {
+  display: flex;
+  width: 500px;
+  height: 400px;
+  justify-content: space-between;
+  background-color: #f1f1f1;
+  flex-direction: column;
+}
+
+.flexSix > .one {
+  display: flex;
+  justify-content: space-around;
+}
+
+.flexSix > .two {
+  display: flex;
+  justify-content: space-between;
+  background-color: #d6d6d6;
+}
+
+.flexSix > .three {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.flexSeven {
+  display: flex;
+  justify-content: space-between;
+  height: 400px;
+  width: 500px;
+}
+
+.flexSeven > .one {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.flexSeven > .two {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.flexSeven > .three {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.flexSeven > .four {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.flexEight {
+  display: flex;
+  width: 300px;
+  height: 400px;
+  background-color: #eeeeee;
+}
+
+.flexEight > .one {
+  display: flex;
+  align-items: center;
+}
+
+.flexEight > .two {
+  display: flex;
+  align-items: flex-end;
+}
+
+.flexEight > .three {
+  display: flex;
+  align-items: flex-start;
+}
+
+.flexNine {
+  display: flex;
+  width: 450px;
+  height: 250px;
+  background-color: #eeeeee;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
+#special {
+  align-self: flex-end;
+}
